<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>ac.york.typhon.analytics.ML2Java</groupId>
	<artifactId>ac.york.typhon.analytics.ML2Java</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Typhon Analytics ML2Java</name>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>

		<dependency>
			<groupId>com.sun.jersey</groupId>
			<artifactId>jersey-client</artifactId>
			<version>1.19.4</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/jersey-client-1.19.4.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.sun.jersey</groupId>
			<artifactId>jersey-core</artifactId>
			<version>1.19.4</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/jersey-core-1.19.4.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>javax.ws.rs</groupId>
			<artifactId>jsr311-api</artifactId>
			<version>1.1.1</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/jsr311-api-1.1.1.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/commons-io-2.6.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1.1</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/json-simple-1.1.1.jar</systemPath>
		</dependency>

	</dependencies>

</project>